<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/margin_large"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hello" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/RegularBlack14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/padding_large"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie"
        tools:text="@string/create_words_list" />

    <EditText
        android:id="@+id/et_name"
        style="@style/EditTextWithWhiteHandlers"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_words_list_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/padding_medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/btn_create"
        app:layout_constraintStart_toStartOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_create"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
